--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
@@ -9,6 +10,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "node-fetch": "^3.3.2",
     "pg": "^8.15.6",
     "sequelize": "^6.37.7"
   }
